# nomai-scrolls

./: .gitignore  CLAUDE.md  README.md  Search_ textasset.html  extract_rows.py  fetch_texts.sh  list.tsv  parsed.csv  pyproject.toml  run.sh
app/: CLAUDE.md
texts/: 1319-TestMural.xml  1320-Test1.txt  1321-Test6.xml  1322-Translation.txt  1324-credits_krazy_playstation.txt  1325-Translation.txt  1326-credits_fast_epic.xml  1327-Translation.xml  1329-Test2.txt  1330-SunStationLinkToTimeLoopMesh.txt  1331-secretsettings_default.txt  1332-NomaiSignalDishMeshA.txt  1333-HologramLabel_01.xml  1335-credits_final_epic.txt  1336-XB1EventsManifest.xml  1337-credits_krazy_epic.xml  1338-Translation.txt  1339-Translation.txt  1340-Test5.xml  1341-UI_XML_fre.txt  1343-credits_krazy_xbox.xml  1345-GoToFire.xml  1346-HologramLabel_02.txt  1347-Test3.txt  1348-UIText.txt  1350-credits_fast_xbox.xml  1351-NomaiSignalDishMeshB.xml  1352-Translation.txt  1353-credits_krazy_steam.xml  1355-Translation.txt  1356-credits_final_playstation.txt  1357-Test.txt  1359-credits_final_steam.txt  1360-credits_fast_steam.txt  1361-credits_final_xbox.xml  1362-UI_XML_eng.txt  1363-credits_fast_playstation.txt  1364-Test4.txt  1366-Translation.txt  2-credits.txt  (+181 more)
texts/.claude/: settings.local.json
texts/translations/: 1342-Translation-pl.xml  1358-Translation-ru.xml
texts/xml/: 7391-GD_ConstructionYard_LaunchReport.xml  7404-BH_OldSettlement_MigrationPlan.xml  7414-BH_Quantum_ShrineNorthHint.xml  7416-GD_StatueIsland_WarpReceiverNote.xml  7421-CT_City_LightSwitch_3.xml  7430-CT_Fossil_ExitHint.xml  (+28 more)
(+435 files in other folders)
